--- a/myapp/templates/admin/index.html
+++ b/myapp/templates/admin/index.html
@@ -13,8 +13,8 @@
     <div class="col-md-6">
         <table border="2px">
             <tr>
-                <th>Ma danh muc</th>
-                <th>Ten danh muc</th>
+                <th>Ma danh muc sp</th>
+                <th>Ten danh muc sp</th>
                 <th>So luong san pham</th>
             </tr>
             {% for p in stats %}
